--- a/Pelican/output/index.html
+++ b/Pelican/output/index.html
@@ -50,6 +50,9 @@ AIMPOWER            </a>
                          <li><a href="/pages/about-us.html">
                              About Us
                           </a></li>
+                        <li >
+                            <a href="/category/speech.html">Speech</a>
+                        </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
             </ul>
@@ -65,6 +68,13 @@ AIMPOWER            </a>
 <div class="container">
     <div class="row">
         <div class="col-lg-12">
+            <article>
+                <h2><a href="/atypical-speech-autotune.html">Speech recognition and enhancement for atypical speech</a></h2>
+                <div class="summary"><p>I play with a few SOTA speech recognition models with my own speech sample and find a way to auto-tune my own speech to reduce disfluency.</p>
+                    <a class="btn btn-default btn-xs" href="/atypical-speech-autotune.html">more ...</a>
+                </div>
+            </article>
+            <hr/>
 
         </div>
     </div>
@@ -75,7 +85,7 @@ AIMPOWER            </a>
    <div class="container">
       <hr>
       <div class="row">
-         <div class="col-xs-10">&copy;  Shaomei Wu
+         <div class="col-xs-10">&copy; 2021 Shaomei Wu
             &middot; Powered by <a href="https://github.com/getpelican/pelican-themes/tree/master/pelican-bootstrap3" target="_blank">pelican-bootstrap3</a>,
             <a href="http://docs.getpelican.com/" target="_blank">Pelican</a>,
             <a href="http://getbootstrap.com" target="_blank">Bootstrap</a>         </div>
