--- a/Pelican/output/pages/about-us.html
+++ b/Pelican/output/pages/about-us.html
@@ -51,6 +51,9 @@ AIMPOWER            </a>
                          <li class="active"><a href="/pages/about-us.html">
                              About Us
                           </a></li>
+                        <li >
+                            <a href="/category/speech.html">Speech</a>
+                        </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
             </ul>
@@ -101,7 +104,7 @@ AIMPOWER            </a>
    <div class="container">
       <hr>
       <div class="row">
-         <div class="col-xs-10">&copy;  Shaomei Wu
+         <div class="col-xs-10">&copy; 2021 Shaomei Wu
             &middot; Powered by <a href="https://github.com/getpelican/pelican-themes/tree/master/pelican-bootstrap3" target="_blank">pelican-bootstrap3</a>,
             <a href="http://docs.getpelican.com/" target="_blank">Pelican</a>,
             <a href="http://getbootstrap.com" target="_blank">Bootstrap</a>         </div>
