--- a/authors.html
+++ b/authors.html
@@ -50,6 +50,9 @@ AIMPOWER            </a>
                          <li><a href="/pages/about-us.html">
                              About Us
                           </a></li>
+                        <li >
+                            <a href="/category/speech.html">Speech</a>
+                        </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
             </ul>
@@ -66,6 +69,7 @@ AIMPOWER            </a>
     <div class="row">
         <div class="col-lg-12">
   <h1>Authors on AIMPOWER</h1>
+        <li><a href="/author/shaomei-wu.html">Shaomei Wu</a> (1)</li>
         </div>
     </div>
 </div>
@@ -75,7 +79,7 @@ AIMPOWER            </a>
    <div class="container">
       <hr>
       <div class="row">
-         <div class="col-xs-10">&copy;  Shaomei Wu
+         <div class="col-xs-10">&copy; 2021 Shaomei Wu
             &middot; Powered by <a href="https://github.com/getpelican/pelican-themes/tree/master/pelican-bootstrap3" target="_blank">pelican-bootstrap3</a>,
             <a href="http://docs.getpelican.com/" target="_blank">Pelican</a>,
             <a href="http://getbootstrap.com" target="_blank">Bootstrap</a>         </div>
