--- a/Pelican/output/pages/about-us.html
+++ b/Pelican/output/pages/about-us.html
@@ -52,7 +52,10 @@ AIMPOWER            </a>
                              About Us
                           </a></li>
                         <li >
-                            <a href="/category/speech.html">Speech</a>
+                            <a href="/category/blog.html">Blog</a>
+                        </li>
+                        <li >
+                            <a href="/category/demo.html">Demo</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
