--- a/authors.html
+++ b/authors.html
@@ -51,7 +51,10 @@ AIMPOWER            </a>
                              About Us
                           </a></li>
                         <li >
-                            <a href="/category/speech.html">Speech</a>
+                            <a href="/category/blog.html">Blog</a>
+                        </li>
+                        <li >
+                            <a href="/category/demo.html">Demo</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -69,7 +72,7 @@ AIMPOWER            </a>
     <div class="row">
         <div class="col-lg-12">
   <h1>Authors on AIMPOWER</h1>
-        <li><a href="/author/shaomei-wu.html">Shaomei Wu</a> (1)</li>
+        <li><a href="/author/shaomei-wu.html">Shaomei Wu</a> (2)</li>
         </div>
     </div>
 </div>
