--- a/demo/atypical-speech-autotune-demo.html
+++ b/demo/atypical-speech-autotune-demo.html
@@ -116,12 +116,12 @@ AIMPOWER            </a>
 </footer><!-- /.post-info -->                    </div>
                 </div>
                 <h2>Auto-tuning Audio with Speech Disfluency</h2>
-<p>Original audio recording of speech with disfluency (you can hear lots of uh's and um's in my speech):</p>
+<p>Original audio recording of speech with disfluency:</p>
 <p><audio controls>
 <source src="/media/short_intro.wav">
 Audio element failed...
 </audio></p>
-<p>Original transcription: </p>
+<p>Original transcription (there are lots of um's): </p>
 <blockquote>
 <p>Hi my name is Shaomei Wu and I um worked at Facebook. Um my research is at the intersection of um AI and um accessibility. So I try to build empowering AI, um, technology for marginalized communities. </p>
 </blockquote>
@@ -131,26 +131,25 @@ Audio element failed...
 Audio element failed...
 </audio></p>
 <h2>Auto-tuning Video with Speech Disfluency</h2>
-<p>Original video recording of me speaking:</p>
-<ul>
-<li><a href="/media/intro_video_short.mp4">Original Video</a></li>
-</ul>
+<p>Original video recording of me speaking (12''):</p>
+<!-- - [Original Video, 12'']({static}/media/intro_video_short.mp4) -->
+
 <video controls height="400">
 <source src="/media/intro_video_short.mp4" type="video/mp4">
 Video rendering failed...
 </video>
 
-<p>Autotuned version:</p>
-<ul>
-<li><a href="/media/autotuned_intro_video_short.mp4">Auto-tuned Video</a></li>
-</ul>
+<p><br></p>
+<p>Autotuned version (10''):</p>
+<!-- - [Auto-tuned Video, 10'']({static}/media/autotuned_intro_video_short.mp4) -->
+
 <video controls height="400">
 <source src="/media/autotuned_intro_video_short.mp4" type="video/mp4">
 Video rendering failed...
 </video>
 
 <h2>Resources</h2>
-<p>Read the blogpost for more details on how the autotuning works.</p>
+<p>Read the <a href="/blog/atypical-speech-autotune.html">blogpost</a> for more details on how the autotuning works.</p>
 <p>The code for producing the results can be found in this <a href="https://colab.research.google.com/drive/1jn8oTaEJRMl9PEKi7jj8zfwnxctxox8u?usp=sharing">notebook</a>. </p>
             </div>
             <!-- /.entry-content -->
