--- a/demo/atypical-speech-autotune-demo.html
+++ b/demo/atypical-speech-autotune-demo.html
@@ -13,13 +13,13 @@
 
         <meta name="author" content="Shaomei Wu" />
         <meta name="keywords" content="Speech-impediment,ASR,wav2vec,kaldi" />
-        <meta name="description" content="A demo for autotuning my own speech in audios and videos to reduce disfluency." />
+        <meta name="description" content="A demo for autotuning my own speech in audio and video to reduce disfluency." />
 
         <meta property="og:site_name" content="AIMPOWER" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="Use AI to autotune audio and videos with atypical speech"/>
         <meta property="og:url" content="/demo/atypical-speech-autotune-demo.html"/>
-        <meta property="og:description" content="A demo for autotuning my own speech in audios and videos to reduce disfluency."/>
+        <meta property="og:description" content="A demo for autotuning my own speech in audio and video to reduce disfluency."/>
         <meta property="article:published_time" content="2021-03-29" />
             <meta property="article:section" content="Demo" />
             <meta property="article:tag" content="Speech-impediment" />
@@ -123,7 +123,7 @@ Audio element failed...
 </audio></p>
 <p>Original transcription (there are lots of um's): </p>
 <blockquote>
-<p>Hi my name is Shaomei Wu and I um worked at Facebook. Um my research is at the intersection of um AI and um accessibility. So I try to build empowering AI, um, technology for marginalized communities. </p>
+<p>Hi my name is Shaomei Wu and I, um, worked at Facebook. Um, my research is at the intersection of, um, AI and, um, accessibility. So I try to build empowering AI, um, technology for marginalized communities. </p>
 </blockquote>
 <p>Autotuned version:</p>
 <p><audio controls>
@@ -131,8 +131,8 @@ Audio element failed...
 Audio element failed...
 </audio></p>
 <h2>Auto-tuning Video with Speech Disfluency</h2>
-<p>Original video recording of me speaking (12''):</p>
-<!-- - [Original Video, 12'']({static}/media/intro_video_short.mp4) -->
+<p>Original video recording of me speaking (12 sec):</p>
+<!-- - [Original Video, 12sec]({static}/media/intro_video_short.mp4) -->
 
 <video controls height="400">
 <source src="/media/intro_video_short.mp4" type="video/mp4">
@@ -140,8 +140,8 @@ Video rendering failed...
 </video>
 
 <p><br></p>
-<p>Autotuned version (10''):</p>
-<!-- - [Auto-tuned Video, 10'']({static}/media/autotuned_intro_video_short.mp4) -->
+<p>Autotuned version (10 sec):</p>
+<!-- - [Auto-tuned Video, 10sec]({static}/media/autotuned_intro_video_short.mp4) -->
 
 <video controls height="400">
 <source src="/media/autotuned_intro_video_short.mp4" type="video/mp4">
